       (matplotlibs new viridis colormap). The old PQLX colormap is provided by
       `obspy.imaging.cm.pqlx` and can be used with
       `PPSD.plot(..., cmap=...)`.
     - new option `PPSD.plot(..., cumulative=True)` for a cumulative plot of
       the histogram, i.e. a non-exceedence percentage visualization, similar
       to the `percentile` option.

0.10.x:
  - obspy.fdsn:
    * More detailed error messages on failing requests (see #1079)
  - obspy.mseed:
    * Blockette 100 is now only written for Traces that need it. Previously
      it was written or not for all Traces, depending on whether the last
      Trace needed it or not. (see #1069)
    * Fixed a bug that prevented microsecond accuracy for times before 1970
      (see #1102).
    * Updated to libmseed 2.17.
  - obspy.signal:
    * Bug fixed within rotate.rotate2ZNE(). Additionally it can now also
      perform the inverse rotation (see #1061).
  - obspy.station:
    * ObsPy no longer assumes that the StationXML namespace is the default
      namespace (see #1060).
  - obspy.taup:
    * Calculating arrival times for surface waves now works (see #1055)
  - obspy.io.zmap
    * Add support for time values with sub-second precision (see #1093)

0.10.2: (doi: 10.5281/zenodo.17641)
 - obspy.core:
   * Fix catalog plot with events that have no origin depth or
     origin time (see #1021)
 - obspy.datamark:
   * Fix datawide=3 and datawide=0.5 block reading (see #1016)
 - obspy.earthworm:
   * Fix Python3 compatibility problem
 - obspy.imaging:
   * Fix flipped maps due to bug in Basemap
   * Fix handling of velocity reduction in section plots with degree offsets
     (see #1029)
   * Allow section plots over existing figures by not modifying existing lines
   * Don't prematurely close waveform figure if returning its handle
 - obspy.seedlink:
   * Fix Python3 compatibility for seedlink.easyseedlink
   * Basic seedlink client: Properly timeout requests with valid station